Replace the embedded mysql with mariadb4j